2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h:
	  - Rearrange member declarations.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/dictpath.h:
	* src/wordstack.h:
	* src/worddef.h:
	* src/abswordseg.h:
	* src/longwordseg.h:
	* src/maxwordseg.h:
	  - Adjust repeated-inclusion-preventing preprocessor style for
	    consistency.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	  - Initialize members with initialization list where possible.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.h:
	  - More member declaration rearrangement.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterhtml.h, src/filterhtml.cpp:
	* src/filterrtf.h, src/filterrtf.cpp:
	  - Rearrange member declarations.
	  - Drop the empty d-tor.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/filterlatex.cpp:
	  - Drop the empty d-tor.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::FilterLatex):
	  - Initialize members with initialization list where possible.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h:
	  - Rearrange member declarations.
	  - Make AdjustText() private.
	  - Make winCharSet, latexFlag private.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/filterlatex.cpp:
	  - Make idxVowelToneMark() non-member, as it depends on file-internal
	    static vars.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/worddef.h, src/filterlatex.cpp:
	  - Move isLongTailChar() to global worddef.h. Rename it to
	    isThaiLongTailChar().
	  - Adjust all calls in filterlatex.cpp accordingly.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make FilterX::wordBreakStr private and initialized by c-tor.
