@@ -1,3 +1,8 @@
+2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/maxwordseg.h:
+	  - Rearrange member declarations.
+
 2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/abswordseg.h:
